--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,10 @@
     <param-name>contextConfigLocation</param-name>
     <param-value>classpath:applicationContext.xml</param-value>
   </context-param>
+  <context-param>
+    <param-name/>
+    <param-value/>
+  </context-param>
 
   <!--解决中文乱码的过滤器-->
   <filter>
